[tool.poetry]
name = "cowriter"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
openai = "^0.26.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.21.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
