[tool.poetry]
name = "cowriter"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2"
openai = "^0.27"
zappa = "^0.56"
Flask-WTF = "^1.0"
func-timeout = "^4.3"
sentry-sdk = {version = "^1.12", extras = ["flask"]}

[tool.poetry.dev-dependencies]
python-dotenv = "^0.21"
black = "^22.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
