[tool.poetry]
name = "cowriter"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0"
openai = "^1.6"
zappa = "^0.58"
Flask-WTF = "^1.0"
func-timeout = "^4.3"
sentry-sdk = {version = "^1.12", extras = ["flask"]}

[tool.poetry.dev-dependencies]
python-dotenv = "^1.0"
black = "^23.12"
pydocstyle = "^6.3"
pycodestyle = "^2.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
